@@ -1,3 +1,7 @@
+2012-08-23  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
+
+	* Added -light, -medium, -heavy, and -assault filters.
+
 2012-08-21  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
 
 	* Added filter for jumping units.
